--- a/advanced/style.css
+++ b/advanced/style.css
@@ -42,6 +42,22 @@ header {
     justify-content: space-around;
 }
 
+.add-button {
+    padding: 10px 20px;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.2s;
+}
+
+.add-button:hover {
+    background-color: #6f6f6f;
+}
+
 .goods-item {
     border: 1px solid #676767;
     border-radius: 5px;
@@ -181,7 +197,41 @@ header {
     font-size: 16px;
     transition: background-color 0.3s;
 }
+
 .remove-button:hover {
     background-color: #333;
 }
 
+.notification {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    overflow: hidden;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    z-index: 1000;
+}
+
+.notification.show {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.notification .progress-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    transform: scaleX(1);
+    transform-origin: left;
+    transition: transform 5s linear;
+}
