--- a/advanced/style.css
+++ b/advanced/style.css
@@ -5,11 +5,12 @@ body {
 }
 
 header {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 .store-name {
@@ -59,7 +60,7 @@ header {
 }
 
 .goods-item {
-    border: 1px solid #676767;
+    border: 1px solid #aeaeae;
     border-radius: 5px;
     padding: 15px;
     width: 300px;
@@ -68,7 +69,7 @@ header {
 }
 
 .goods-item-photo {
-    background-color: #c3c3c3;
+    background-color: #000000;
     height: 300px;
     border-radius: 5px;
     width: 100%;
@@ -81,10 +82,15 @@ header {
     transform: scale(1.01);
 }
 
-.goods-item h3,
-.goods-item h4 {
+.goods-item h3 {
     margin-top: 10px;
     color: #333;
+    font-size: 20px;
+    font-weight: normal;
+}
+.goods-item h4 {
+    margin-top: 10px;
+    color: #ffffff;
     font-size: 20px;
     font-weight: normal;
 }
@@ -95,7 +101,34 @@ header {
     font-weight: bold;
 }
 
+.search-box{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.search-area{
+    width: 30%;
+    height: 30px;
+    border-radius: 3px;
+    font-size: 15px;
+}
 
+.search-button {
+    padding: 5px 20px;
+    margin-left: 5px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.2s;
+}
+
+.search-button:hover {
+    background-color: #6f6f6f;
+    transform: scale(1.01);
+}
 /* Корзина */
 .cart-modal {
     display: none;
@@ -202,6 +235,120 @@ header {
     background-color: #333;
 }
 
+/* Оформление заказа (Форма) */
+.form-area{
+    width: 30%;
+    height: 30px;
+    border-radius: 3px;
+    font-size: 15px;
+}
+.cart-modal-order {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.cart-content-order {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    max-width: 800px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cart-header-order {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #000000;
+}
+
+.cart-header-order h2 {
+    margin: 0;
+    color: #333;
+}
+
+.close-cart-order {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-cart-order:hover {
+    color: #333;
+}
+
+.cart-body-order {
+    display: flex;
+    max-height: 400px;
+    overflow-y: auto;
+    margin: 20px 0;
+    justify-content: space-around;
+}
+
+.cart-item-order {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.cart-footer-order {
+    border-top: 1px solid #000000;
+    padding-top: 15px;
+}
+
+.cart-total-order {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.checkout-btn-order {
+    width: 100%;
+    padding: 12px;
+    background-color: #000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.checkout-btn-order:hover {
+    background-color: #333;
+}
+
+.remove-button-order {
+    padding: 5px;
+    width: 30px;
+    background-color: #000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.remove-button-order:hover {
+    background-color: #333;
+}
+
 .notification {
     position: fixed;
     bottom: 20px;
@@ -234,4 +381,43 @@ header {
     transform: scaleX(1);
     transform-origin: left;
     transition: transform 5s linear;
+}
+
+.notification-bad {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ff0000;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    overflow: hidden;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    z-index: 1000;
+}
+
+.notification-bad.show-bad {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.notification-bad .progress-bar-bad {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    transform: scaleX(1);
+    transform-origin: left;
+    transition: transform 5s linear;
+}
+
+.error {
+    border: 2px solid #ff4444;
+    background-color: #ffebee;
 }
