--- a/advanced/css/style.css
+++ b/advanced/css/style.css
@@ -17,17 +17,18 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2rem;
-    background: #000000;
+    background: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
     z-index: 100;
+    border-bottom: 1px solid black;
 }
 
 .header__logo {
     font-size: 1.8rem;
     font-weight: 700;
-    color: #ffffff;
+    color: #000000;
 }
 
 /* Стили для поиска с крестиком */
@@ -46,11 +47,12 @@ body {
 .search-input {
   width: 100%;
   padding: 0.6rem 35px 0.6rem 1rem;
-  border: 1px solid #ffffff;
+  border: 1px solid #000000;
   border-radius: 4px;
   font-size: 1rem;
   transition: border-color 0.3s;
   background: #fff;
+  
 }
 
 .search-clear {
@@ -82,8 +84,8 @@ body {
 
 .header__cart-btn {
     padding: 0.6rem 1.2rem;
-    background: #ffffff;
-    color: rgb(0, 0, 0);
+    background: #000000;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 4px;
     font-size: 1rem;
@@ -92,9 +94,9 @@ body {
 }
 
 .header__cart-btn:hover {
-    background: #000000;
-    color: rgb(255, 255, 255);
-    outline: 1px solid white;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
+    outline: 1px solid rgb(0, 0, 0);
 }
 
 /* Основное содержимое */
@@ -124,6 +126,7 @@ body {
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
+    border: 1px solid black;
 }
 
 .product-card:hover {
@@ -133,10 +136,12 @@ body {
 
 .product-card__image {
     height: 200px;
-    background: #000000;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 8px;
+    border-bottom: 1px solid black;
 }
 
 .product-card__title {
